--- a/src/pages/to.astro
+++ b/src/pages/to.astro
@@ -3,6 +3,7 @@ import AssetCard from "@/components/AssetCard.astro";
 import Layout from "@/layouts/Main.astro";
 import { ASSET_URL, type Asset } from "@/lib/asset";
 import { Wrench } from "lucide-astro";
+export const prerender = false;
 const tools: Asset[] = await (await fetch(`${ASSET_URL}/json/tools.json`)).json();
 ---
 
