--- a/src/components/AssetCard.astro
+++ b/src/components/AssetCard.astro
@@ -7,6 +7,7 @@ import { ASSET_URL, type Asset } from "@/lib/asset";
 import { Ban, CircleAlert, UserRoundPlus } from "lucide-astro";
 
 const { asset } = Astro.props;
+export const prerender = false;
 ---
 
 <button data-asset={JSON.stringify(asset)}>
