chore: Added option to disable Astro's Telemetry, Converted colors to hex

--- a/src/pages/to.astro
+++ b/src/pages/to.astro
@@ -9,7 +9,7 @@ const tools: Asset[] = await (await fetch(`${ASSET_URL}/json/tools.json`)).json(
 
 <Layout>
   <div class="flex justify-center py-8 flex-col items-center">
-    <div class="text-4xl font-bold text-text-secondary inline-flex mb-4">
+    <div class="text-4xl font-bold text-text inline-flex mb-4">
       <Wrench class="size-12 mr-2" />
       Tools
     </div>
