--- a/src/global.css
+++ b/src/global.css
@@ -6,14 +6,14 @@
 @layer base {
    :root {
       /* --background-image: url("/assets/media/backgrounds/full-inverted.png"); */
-      --background: 0, 0%, 7%;
-      --background-secondary: 0, 0%, 13%;
-      --interactive: 0, 0%, 20%;
-      --interactive-secondary: 0, 0%, 47%;
-      --border: 0, 0%, 27%;
-      --accent: 0, 0%, 27%;
-      --text: 0, 0%, 100%;
-      --text-secondary: 0, 0%, 87%;
+      --background: #111;
+      --background-secondary: #222;
+      --interactive: #333;
+      --interactive-secondary: #777;
+      --border: #444;
+      --accent: #444;
+      --text: #fff;
+      --text-secondary: #ddd;
    }
 }
 
@@ -25,4 +25,25 @@
    * {
       @apply border-border;
    }
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+	background-color: var(--background-secondary);
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-color: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: var(--text);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: var(--text-secondary);
 }
