--- a/src/pages/ap.astro
+++ b/src/pages/ap.astro
@@ -10,7 +10,7 @@ const customApps = (Astro.cookies.get("asset.app")?.json() as Asset[]) ?? [];
 
 <Layout>
   <div class="flex justify-center py-8 flex-col items-center gap-4">
-    <div class="text-4xl font-bold text-text-secondary inline-flex">
+    <div class="text-4xl font-bold text-text inline-flex">
       <LayoutGrid class="size-12 mr-2" />
       Apps
     </div>
