--- a/src/pages/ga.astro
+++ b/src/pages/ga.astro
@@ -10,7 +10,7 @@ const customGames = (Astro.cookies.get("asset.game")?.json() as Asset[]) ?? [];
 
 <Layout>
   <div class="flex justify-center py-8 flex-col items-center gap-4">
-    <div class="text-4xl font-bold text-text-secondary inline-flex">
+    <div class="text-4xl font-bold text-text inline-flex">
       <Gamepad2 class="size-12 mr-2" />
       Games
     </div>
