--- a/src/components/AssetCard.astro
+++ b/src/components/AssetCard.astro
@@ -17,7 +17,7 @@ export const prerender = false;
       {asset.custom && <UserRoundPlus class="size-5" />}
       {asset.partial && <CircleAlert class="size-5" />}
       {asset.error && <Ban class="size-5" />}
-      <span class="text-center font-semibold text-lg line-clamp-1">
+      <span class="text-center font-semibold text-lg line-clamp-2 hover:line-clamp-3">
         {asset.name}
       </span>
     </section>
