chore: finish tab cloaker, add more cloaks

--- a/src/global.css
+++ b/src/global.css
@@ -11,6 +11,7 @@
       --background-settings: #171717;
       --interactive: #333;
       --interactive-secondary: #777;
+      --dropdown: #333;
       --border: #444;
       --accent: #444;
       --accent-secondary: #2e2e2e;
