--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,8 +21,8 @@ import { ViewTransitions } from "astro:transitions";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="shortcut icon" href="/assets/media/favicons/default.png" />
-    <title>Interstellar</title>
+    <link id="icon" rel="shortcut icon" href="/assets/media/favicons/default.png" />
+    <title id="title">Home</title>
     <ViewTransitions />
     <script is:inline src="/assets/bundled/v.bndl.js" defer></script>
     <script is:inline src="/assets/bundled/v.cnfg.js" defer></script>
