--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -12,7 +12,7 @@ const navLinks = [
 ---
 
 <Layout>
-  <nav class="flex flex-row justify-between backdrop-blur-lg bg-secondary border-none w-[98vw] h-20 px-6 rounded-xl mx-4 mt-4 fixed top-0">
+  <nav class="flex flex-row justify-between backdrop-blur-lg bg-background-secondary border-none w-[98vw] h-20 px-6 rounded-xl mx-4 mt-4 fixed top-0">
     <a href="/" class="uppercase flex items-center hover:-translate-y-1 hover:scale-105 duration-150 text-6xl font-black">in</a>
     <ul class="flex flex-row items-center text-2xl gap-6 font-semibold">
       {
