--- a/src/pages/ap.astro
+++ b/src/pages/ap.astro
@@ -8,6 +8,7 @@ const apps: Asset[] = await (await fetch(`${ASSET_URL}/json/apps.json`)).json();
 const customApps = (Astro.cookies.get("asset.app")?.json() as Asset[]) ?? [];
 ---
 
+<script src="@/lib/global.ts"></script>
 <Layout>
   <div class="flex justify-center py-8 flex-col items-center gap-4">
     <div class="text-4xl font-bold text-text inline-flex">
