--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,12 @@ import Layout from "@/layouts/Main.astro";
 ---
 
 <script src="@/lib/cloak.ts"></script>
+<script src="@/lib/global.ts"></script>
 <Layout>
   <div class="flex h-full flex-col overflow-hidden">
     <h3 class="flex text-8xl font-black uppercase place-content-center mt-40 hover:scale-105 hover:-translate-y-1 duration-150">Interstellar</h3>
     <div id="form" class="flex mt-4 flex-col items-center justify-center gap-4">
-      <input
-        class="h-16 rounded-md w-1/2 py-3 px-4 placeholder-text leading-tight focus:outline-none bg-interactive border-border"
-        placeholder="Search"
-        id="search"
-      />
+      <input class="h-16 rounded-md w-1/2 py-3 px-4 placeholder-text leading-tight focus:outline-none bg-interactive border-border" placeholder="Search" id="search" />
     </div>
   </div>
 </Layout>
