chore: add search engine options + save notification

--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -7,6 +7,23 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook } from "lucide-as
 
 <script src="@/lib/global.ts"></script>
 <Layout>
+  <div class="hidden" id="notification-container-engine">
+    <div class="bg-teal-100 border-t-4 border-teal-500 rounded-lg text-teal-900 px-4 py-3 shadow-md fixed top-4 right-4 w-96" role="alert">
+      <div class="flex">
+        <div class="py-1">
+          <svg class="fill-current h-6 w-6 text-teal-500 mr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+            <path d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93 17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9 11V9h2v6H9v-4zm0-6h2v2H9V5z"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <p class="font-bold"></p>
+          <p class="text-sm">Your selection has been successfully saved.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="flex flex-col gap-2 justify-center items-center">
     <div>
       <h1 class="font-extrabold text-4xl">Cloaking & Privacy</h1>
@@ -15,7 +32,7 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook } from "lucide-as
       <SettingsCard description="Access our site through an about:blank tab." title="About:Blank" Icon={ExternalLink} />
       <SettingsCard description="Change the name and title of every single page on our site." title="Tab Cloaker" Icon={EyeOff}>
         <Dropdown
-          id="dropdownDelay"
+          id="cloaker"
           text="Tab Cloaker"
           menu={[
             { value: "Britannica", text: "Britannica" },
@@ -79,10 +96,24 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook } from "lucide-as
       <h1 class="font-extrabold text-4xl">Customization</h1>
     </div>
     <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 p-4 justify-center">
-      <SettingsCard description="Choose your own search engine. (Default: Google)" title="Search Engine" Icon={Search} />
+      <SettingsCard description="Choose your own search engine. (Default: Google)" title="Search Engine" Icon={Search}>
+        <Dropdown
+          id="engine"
+          text="Select Search Engine"
+          menu={[
+            { value: "Bing", text: "Bing" },
+            { value: "DuckDuckGo", text: "DuckDuckGo" },
+            { value: "Ecosia", text: "Ecosia" },
+            { value: "Google", text: "Google" },
+            { value: "Qwant", text: "Qwant" },
+            { value: "SearchEncrypt", text: "SearchEncrypt" },
+            { value: "Startpage", text: "Startpage" },
+          ]}
+        />
+      </SettingsCard>
       <SettingsCard description="Pick from a variety of themes to customize your experience." title="Themes" Icon={SwatchBook} />
       <SettingsCard description="Choose from a variety of particles to customize your experience on the home page." title="Particles" Icon={Atom} />
     </section>
   </div>
-  <script is:inline src="/src/lib/settings.ts"></script>
+  <script is:inline src="/src/lib/settings.ts?v=1"></script>
 </Layout>
