--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -2,7 +2,8 @@
 import Dropdown from "@/components/Dropdown.astro";
 import SettingsCard from "@/components/SettingsCard.astro";
 import Layout from "@/layouts/Main.astro";
-import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook } from "lucide-astro";
+import ArrowButton from '../components/ArrowButton.astro';
+import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook, Info} from "lucide-astro";
 ---
 
 <script src="@/lib/global.ts"></script>
@@ -26,10 +27,12 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook } from "lucide-as
 
   <div class="flex flex-col gap-2 justify-center items-center">
     <div>
-      <h1 class="font-extrabold text-4xl">Cloaking & Privacy</h1>
+      <h1 class="mt-2 font-extrabold text-5xl">Settings</h1>
     </div>
     <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 p-4 justify-center">
-      <SettingsCard description="Access our site through an about:blank tab." title="About:Blank" Icon={ExternalLink} />
+      <SettingsCard description="Access our site through an about:blank tab." title="About:Blank" Icon={ExternalLink}>
+        <ArrowButton id="AB" title="Open Popup" />
+      </SettingsCard>
       <SettingsCard description="Change the name and title of every single page on our site." title="Tab Cloaker" Icon={EyeOff}>
         <Dropdown
           id="cloaker"
@@ -90,12 +93,14 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook } from "lucide-as
           ]}
         />
       </SettingsCard>
-      <SettingsCard description="Quickly open another website that will replace the current website by pressing a button." title="Panic Key" Icon={Siren} />
-    </section>
-    <div>
-      <h1 class="font-extrabold text-4xl">Customization</h1>
-    </div>
-    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 p-4 justify-center">
+      <SettingsCard description="Quickly open another website that will replace the current website by pressing a button." title="Panic Key" Icon={Siren}>
+        <div class="flex px-4 py-3 rounded-md border-2 border-border overflow-hidden max-w-md mx-auto mt-2 mb-2">
+          <input placeholder="Panic Key" class="w-full outline-none bg-transparent text-text text-sm" />
+        </div>
+        <div class="flex px-4 py-3 rounded-md border-2 border-border overflow-hidden max-w-md mx-auto">
+          <input placeholder="Panic Link" class="w-full outline-none bg-transparent text-text text-sm" />
+        </div>
+    </SettingsCard>
       <SettingsCard description="Choose your own search engine. (Default: Google)" title="Search Engine" Icon={Search}>
         <Dropdown
           id="engine"
@@ -110,10 +115,29 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook } from "lucide-as
             { value: "Startpage", text: "Startpage" },
           ]}
         />
+        <div class="flex px-4 py-3 rounded-md border-2 border-border overflow-hidden max-w-md mx-auto mt-2 mb-2">
+          <input placeholder="Custom Search Engine" class="w-full outline-none bg-transparent text-text text-sm" />
+        </div>
       </SettingsCard>
       <SettingsCard description="Pick from a variety of themes to customize your experience." title="Themes" Icon={SwatchBook} />
       <SettingsCard description="Choose from a variety of particles to customize your experience on the home page." title="Particles" Icon={Atom} />
+      <div class="w-full bg-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px] ">
+        <div class="flex items-center gap-2">
+          <Info class="size-6" />
+          <h3 class="font-extrabold text-2xl mt-0">Information</h3>
+        </div>
+        <p class="font-light">
+          Version: <span class="font-bold">6.0.1</span><br/>
+          Last Updated: <span class="font-bold">September 5th, 2024</span><br />
+          If you have any questions or concerns, please contact us at 
+          <a class="font-medium" href="mailto:hello@gointerstellar.app">hello@gointerstellar.app</a> 
+          or visit our 
+          <a class="font-medium" href="https://discord.gg/interstellar">Discord</a> 
+          or read our 
+          <a class="font-medium" href="https://docs.gointerstellar.app/">Documentation</a>.
+        </p>
+      </div>       
     </section>
   </div>
-  <script is:inline src="/src/lib/settings.ts?v=1"></script>
+  <script is:inline src="/src/lib/settings.ts?v=2"></script>
 </Layout>
