Switch to lucide loader

--- a/src/pages/tb.astro
+++ b/src/pages/tb.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { ArrowLeft, ArrowRight, Home, Maximize2, Plus, RotateCw, Star } from "lucide-astro";
+import { ArrowLeft, ArrowRight, Home, Loader, Maximize2, Plus, RotateCw, Star } from "lucide-astro";
 ---
 
 <script src="@/lib/global.ts"></script>
@@ -46,7 +46,7 @@ import { ArrowLeft, ArrowRight, Home, Maximize2, Plus, RotateCw, Star } from "lu
   </div>
   <script src="/src/lib/tabs.ts"></script>
   <div class="loader absolute top-0 left-0 flex flex-col w-full h-screen justify-center items-center z-[-99]">
-    <img src="/assets/media/backgrounds/loader.svg" class="w-24 h-24" />
+    <Loader class="w-24 h-24 animate-spin text-white-500" />
     <h2 class="mt-2">Interstellar is loading your content!</h2>
   </div>
   <iframe id="frame__1" class="w-full h-screen z-9"></iframe>
