--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -2,11 +2,10 @@
 import Dropdown from "@/components/Dropdown.astro";
 import SettingsCard from "@/components/SettingsCard.astro";
 import Layout from "@/layouts/Main.astro";
-import ArrowButton from '../components/ArrowButton.astro';
-import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook, Info} from "lucide-astro";
+import { Atom, ExternalLink, EyeOff, Info, Search, Siren, SwatchBook } from "lucide-astro";
+import ArrowButton from "../components/ArrowButton.astro";
 ---
 
-<script src="@/lib/global.ts"></script>
 <Layout>
   <div class="hidden" id="notification-container-engine">
     <div class="bg-teal-100 border-t-4 border-teal-500 rounded-lg text-teal-900 px-4 py-3 shadow-md fixed top-4 right-4 w-96" role="alert">
@@ -106,7 +105,7 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook, Info} from "luci
         <div class="flex px-4 py-3 rounded-md border-2 border-border overflow-hidden max-w-md mx-auto">
           <input id="p-link" placeholder="Panic Link" class="w-full outline-none bg-transparent text-text text-sm" />
         </div>
-    </SettingsCard>
+      </SettingsCard>
       <SettingsCard description="Choose your own search engine. (Default: Google)" title="Search Engine" Icon={Search}>
         <Dropdown
           id="engine"
@@ -127,22 +126,22 @@ import { Atom, ExternalLink, EyeOff, Search, Siren, SwatchBook, Info} from "luci
       </SettingsCard>
       <SettingsCard description="Customize the theme of the site and choose from a variety of particles to customize the site further." title="Customization" Icon={SwatchBook} />
       <!-- Information Card -->
-      <div class="w-full bg-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px] ">
+      <div class="w-full bg-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px]">
         <div class="flex items-center gap-2">
           <Info class="size-6" />
           <h3 class="font-extrabold text-2xl mt-0">Information</h3>
         </div>
         <p class="font-light">
-          Version: <span class="font-bold">6.0.1</span><br/>
-          Last Updated: <span class="font-bold">September 5th, 2024</span><br />
-          If you have any questions or concerns, please contact us at 
-          <a class="font-medium" href="mailto:hello@gointerstellar.app">hello@gointerstellar.app</a> 
-          or visit our 
-          <a class="font-medium" href="https://discord.gg/interstellar">Discord</a> 
-          or read our 
+          Version: <span class="font-bold">6.0.1</span><br />
+          Last Updated: <span class="font-bold">{new Date(__COMMIT_DATE__).toLocaleString()}</span><br />
+          If you have any questions or concerns, please contact us at
+          <a class="font-medium" href="mailto:hello@gointerstellar.app">hello@gointerstellar.app</a>
+          or visit our
+          <a class="font-medium" href="https://discord.gg/interstellar">Discord</a>
+          or read our
           <a class="font-medium" href="https://docs.gointerstellar.app/">Documentation</a>.
         </p>
-      </div>       
+      </div>
     </section>
   </div>
   <script is:inline src="/src/lib/settings.ts?v=2"></script>
